--- a/worker/Dockerfile.dev
+++ b/worker/Dockerfile.dev
@@ -1,6 +1,7 @@
-FROM node:alpine
-WORKDIR "/app"
+FROM node:14.14.0-alpine
+WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
-COPY . .
-CMD ["npm", "run", "dev"]
+COPY . . 
+
+CMD ["npm","run","dev"]
